--- a/Croatian/main/CloudService.apk/res/values-hr/strings.xml
+++ b/Croatian/main/CloudService.apk/res/values-hr/strings.xml
@@ -32,6 +32,10 @@
   <string name="accept_all_positive">Odaberi</string>
   <string name="accept_use_permissions">Odobri</string>
   <string name="access_denied">Pristup odbijen</string>
+  <string name="accessibility_sliding_button_state_description_off">Isključeno</string>
+  <string name="accessibility_sliding_button_state_description_on">Uključeno</string>
+  <string name="accessibility_tab_state_description_unselect">Nije odabrano</string>
+  <string name="accessibility_tab_statedesc_unselect">Nije odabrano</string>
   <string name="account_related">Vaš uređaj je povezan s postojećim Xiaomi računom (%s). Povežite se na mrežu da potvrdite uređaj.</string>
   <string name="actionbar_button_up_description">Natrag</string>
   <string name="activate_find_device_success">Pronađi uređaj je aktiviran.</string>
@@ -54,6 +58,7 @@
   <string name="calendar_sync_item_permission">kalendar</string>
   <string name="call_log_sync_item_permission">povijest poziva</string>
   <string name="check_contact">Dodaj</string>
+  <string name="checked">Odabrano</string>
   <string name="choose_contact_title">Kontakti</string>
   <string name="clearable_edittext_clear_description">Izbriši</string>
   <string name="close">Zatvori</string>
@@ -150,6 +155,7 @@
   <string name="download_gallery_data_summary">Idite na i.mi.com za preuzimanje sinkroniziranih fotografija i videozapisa na svoj uređaj.</string>
   <string name="download_gallery_data_title">Preuzimanje stavki na vaš uređaj</string>
   <string name="e2ee_button_close">Isključi</string>
+  <string name="e2ee_button_exit_all_devices">Odjava na svim uređajima</string>
   <string name="e2ee_button_next">Dalje</string>
   <string name="e2ee_change_security_key_lockscreen_tip">Uključite zaključavanje zaslona za ovaj uređaj kako biste mogli ažurirati svoj sigurnosni ključ.</string>
   <string name="e2ee_data_protection_close_button">Isključi</string>
@@ -204,6 +210,7 @@
   <string name="e2ee_exit_account_button_exit">Odjava</string>
   <string name="e2ee_exit_account_subtitle">"Namjeravate se odjaviti sa zadnjeg trenutno povezanog uređaja povezanog s vašim Xiaomi računom. Morat ćete upotrijebiti zaključavanje zaslona ili sigurnosni ključ kako biste se ponovno prijavili i pristupili svojim podacima pohranjeni u oblaku. Ili dodirnite \"Isključi\" u nastavku da biste isključili Naprednu zaštitu podataka."</string>
   <string name="e2ee_exit_account_title">Odjava</string>
+  <string name="e2ee_exit_many_devices_hint">%1$s %2$s</string>
   <string name="e2ee_load_failed">Poslužitelj je zauzet. Pričekajte minutu ili dvije i pokušajte ponovno.</string>
   <string name="e2ee_loading">Samo trenutak…</string>
   <string name="e2ee_loading_close">Isključivanje…</string>
@@ -608,7 +615,11 @@ Provjerite koristite li povezani Xiaomi račun kao svoj MIUI račun."</string>
   <string name="midrive_guide_btn_installed">Otvori Xiaomi Drive</string>
   <string name="midrive_guide_btn_installing">Instaliranje…</string>
   <string name="miuix_access_state_desc">Odabrano</string>
+  <string name="miuix_accessibility_title">Naslov</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
+  <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Završi način rada za uređivanje</string>
+  <string name="miuix_appcompat_accessibility_new_message">Nova poruka</string>
+  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Pokreni način rada za uređivanje</string>
   <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_action_mode_title_empty">Odaberi stavke</string>
@@ -627,6 +638,7 @@ Provjerite koristite li povezani Xiaomi račun kao svoj MIUI račun."</string>
   <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
   <string name="miuix_indexer_collect">Zbirke</string>
   <string name="miuix_indexer_selected">Odabrano %s</string>
+  <string name="miuix_progressbar_loading">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_pull_to_refresh">Povuci za osvježiti</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshed">Gotovo</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshing">Osvježavanje</string>
@@ -635,6 +647,7 @@ Provjerite koristite li povezani Xiaomi račun kao svoj MIUI račun."</string>
   <string name="miuix_sbl_tracking_progress_labe_up_none">"To je sve za sada"</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh_fail">"Ne mogu učitati stavke"</string>
+  <string name="miuix_show_password">Prikaži zaporku</string>
   <string name="monday">Ponedjeljak</string>
   <string name="monday_short">Pon</string>
   <string name="monday_shortest">P</string>
@@ -677,6 +690,7 @@ Provjerite koristite li povezani Xiaomi račun kao svoj MIUI račun."</string>
   <string name="more">Više</string>
   <string name="no_network">"Ne mogu se povezati s mrežom"</string>
   <string name="no_sim">"Ne mogu pronaći SIM karticu"</string>
+  <string name="not_checked">Nije odabrano</string>
   <string name="not_set">Nije postavljeno</string>
   <string name="noti_quota_button_text">Nadogradi</string>
   <string name="noti_quota_full_sum">Nadogradite vaš plan pohrane za nastavak sinkroniziranja stavki.</string>
@@ -990,6 +1004,7 @@ Podaci o lokaciji možda se neće prijaviti kada je mrežna veza loša."</string
   <string name="system_busy_or_network_error">Dogodila se pogreška. Pričekajte minutu ili dvije i pokušajte ponovno.</string>
   <string name="talkback_hide_passcode">Sakrij zaporku</string>
   <string name="talkback_show_passcode">Prikaži zaporku</string>
+  <string name="text_input_layout_default_error">Ovo je zadana pogreška</string>
   <string name="thursday">Četvrtak</string>
   <string name="thursday_short">Čet</string>
   <string name="thursday_shortest">Č</string>
