--- a/Croatian/main/FileExplorer.apk/res/values-hr/strings.xml
+++ b/Croatian/main/FileExplorer.apk/res/values-hr/strings.xml
@@ -29,6 +29,10 @@
   <string name="abc_toolbar_collapse_description">Sažmi</string>
   <string name="access_limit">Ograničenja pristupa</string>
   <string name="access_tips">"Ne mogu pristupiti stavkama. Pokušajte umjesto toga koristiti Android Storage Access Framework."</string>
+  <string name="accessibility_sliding_button_state_description_off">Isključeno</string>
+  <string name="accessibility_sliding_button_state_description_on">Uključeno</string>
+  <string name="accessibility_tab_state_description_unselect">Nije odabrano</string>
+  <string name="accessibility_tab_statedesc_unselect">Nije odabrano</string>
   <string name="action_cache_to_local">Preuzmi na uređaj</string>
   <string name="action_mode_deselect_all">Poništi odabir</string>
   <string name="action_mode_select_all">Odaberi sve</string>
@@ -42,6 +46,7 @@
   <string name="aggree_desc">Dopustite ovoj aplikaciji da se poveže s internetom i odobrite gore navedena obvezna dopuštenja.</string>
   <string name="agree">Prihvaćam</string>
   <string name="ai_search_building_database">Analiziranje datoteka za pružanje preciznijih rezultata…</string>
+  <string name="ai_search_building_database_details">Prikaz pojedinosti</string>
   <string name="ai_search_building_database_pause">Datoteke će se analizirati na vašem uređaju kako bi se dobili precizniji rezultati</string>
   <string name="ai_search_progress">Analiziranje datoteka… (%s)</string>
   <string name="ai_search_progress_tips">"Neka vaš uređaj bude povezan s punjačem. Brže će analizirati datoteke kada je ekran isključen."</string>
@@ -61,6 +66,7 @@
   <string name="app_name_miuiwallpaper">Slike pozadine</string>
   <string name="app_name_recorder">Snimač</string>
   <string name="app_name_screenshot">Snimke zaslona</string>
+  <string name="application_message">Obavijesti aplikacije</string>
   <string name="available_size">Dostupno: %s</string>
   <string name="big5_summary">Zadani format za Windowse s tradicionalnim kineskim</string>
   <string name="big5_title">BIG5</string>
@@ -166,6 +172,7 @@ Pokušajte premjestiti datoteke sa svog uređaja na Mi Drive."</string>
   <string name="cloud_transfer_wait_download">Čeka se preuzimanje</string>
   <string name="cloud_transfer_wait_network">Čekanje na internet</string>
   <string name="cloud_transfer_wait_upload">Čeka se prijenos</string>
+  <string name="collapse">Sažmi</string>
   <string name="common_google_play_services_unknown_issue">%1$s ima problema s Google Play uslugama. Pokušajte ponovno.</string>
   <string name="compress_fail">"Ne mogu sažeti. Datoteka s istim imenom već postoji."</string>
   <string name="compress_fail_unknown">"Ne mogu sažeti. Prostor za pohranu je pun ili je došlo do nepoznate pogreške."</string>
@@ -277,6 +284,7 @@ Pokušajte premjestiti datoteke sa svog uređaja na Mi Drive."</string>
   <string name="error_open_file_failed_no_app_found">"Ne mogu pronaći aplikacije za otvaranje ove datoteke."</string>
   <string name="exception_net_not_available">Provjerite mrežne postavke i pokušajte ponovno</string>
   <string name="exit">Izlaz</string>
+  <string name="expand">Proširi</string>
   <string name="expand_button_title">Napredno</string>
   <string name="exposed_dropdown_menu_content_description">Prikaži padajući izbornik</string>
   <string name="extend_service_setting">Dodatne usluge</string>
@@ -330,10 +338,12 @@ Pokušajte premjestiti datoteke sa svog uređaja na Mi Drive."</string>
   <string name="friday_shortest">P</string>
   <string name="ftp_account_req_notice">Korisničko ime i zaporka razlikuju velika i mala slova i moraju sadržavati %1$d-%2$d znakova. Možete kombinirati engleska slova, posebne simbole i brojeve.</string>
   <string name="ftp_anonymous_login">Anonimna prijava</string>
+  <string name="ftp_anonymous_warning_confirm">Koristi</string>
   <string name="ftp_anonymous_warning_msg">Značajke anonimizacije mogu predstavljati sigurnosni rizik. Koristiti značajku svejedno?</string>
   <string name="ftp_anonymous_warning_title">Pažnja</string>
   <string name="ftp_invalid_username">"Korisničko ime ne može sadržavati posebne znakove. Unesite drugo ime."</string>
   <string name="ftp_invalid_username_or_password">Netočno korisničko ime ili zaporka</string>
+  <string name="ftp_login_confirm">Prijava</string>
   <string name="ftp_open_port_error">"Ne mogu otvoriti port. Provjerite mrežno povezivanje ili resetirajte broj porta."</string>
   <string name="ftp_password_hint">Zaporka</string>
   <string name="ftp_port_number">Broj porta</string>
@@ -458,7 +468,13 @@ Pokušajte premjestiti datoteke sa svog uređaja na Mi Drive."</string>
   <string name="mirror_tip_refresh">Osvježi</string>
   <string name="mirror_tip_show_type">Sortiraj po</string>
   <string name="miuix_access_state_desc">Odabrano</string>
+  <string name="miuix_accessibility_title">Naslov</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
+  <string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
+  <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
+  <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izađi iz načina uređivanja</string>
+  <string name="miuix_appcompat_accessibility_new_message">Nova obavijest</string>
+  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Uđite u način uređivanja</string>
   <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_action_mode_title_empty">Odaberi stavke</string>
@@ -475,15 +491,29 @@ Pokušajte premjestiti datoteke sa svog uređaja na Mi Drive."</string>
   <string name="miuix_appcompat_select_all_description">Odaberi sve</string>
   <string name="miuix_appcompat_select_item">Odaberi stavke</string>
   <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_close">Prevucite prema dolje za zatvaranje</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_half_screen">Prevucite prstom prema dolje za prebacivanje na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_minimized">Prevucite prema dolje za minimiziranje</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_half_screen">Prevucite prstom prema gore za prebacivanje na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_maximized">Prevucite prstom prema gore za maksimiziranje</string>
+  <string name="miuix_bottom_sheet_accessibility_state_half_screen">Pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_state_maximized">Maksimizirano</string>
+  <string name="miuix_bottom_sheet_accessibility_state_minimized">Minimizirano</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_half_screen">Prebaci na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_maximized">Maksimiziraj</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_minimized">Minimiziraj</string>
   <string name="miuix_indexer_collect">Zbirke</string>
-  <string name="miuix_indexer_selected">Odabrano %s</string>
+  <string name="miuix_item_view_accessibility_unselected">Nije odabrano</string>
   <string name="miuix_item_view_role_description">Kartica</string>
   <string name="miuix_navigator_category_group_collapse">Sažmi</string>
+  <string name="miuix_navigator_category_group_collapsed">Zatvoreno</string>
   <string name="miuix_navigator_category_group_expand">Proširi</string>
+  <string name="miuix_navigator_category_group_expanded">Prošireno</string>
   <string name="miuix_navigator_content_switch_description">Prikaži bočnu traku</string>
   <string name="miuix_navigator_multiple_choice">Odaberi</string>
   <string name="miuix_navigator_navigator_switch_description">Sakrij bočnu traku</string>
   <string name="miuix_popup_window_default_title">Skočni prozor</string>
+  <string name="miuix_progressbar_loading">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_pull_to_refresh">Povuci za osvježiti</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshed">Gotovo</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshing">Osvježavanje</string>
@@ -492,6 +522,9 @@ Pokušajte premjestiti datoteke sa svog uređaja na Mi Drive."</string>
   <string name="miuix_sbl_tracking_progress_labe_up_none">"To je sve za sada"</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh_fail">"Ne mogu učitati stavke"</string>
+  <string name="miuix_show_password">Prikaži zaporku</string>
+  <string name="miuix_stretchablewidget_collapsed">Zatvoreno</string>
+  <string name="miuix_stretchablewidget_expanded">Prošireno</string>
   <string name="monday">Ponedjeljak</string>
   <string name="monday_short">Pon</string>
   <string name="monday_shortest">P</string>
@@ -885,6 +918,7 @@ Pokušajte premjestiti datoteke sa svog uređaja na Mi Drive."</string>
   <string name="tab_more">Više</string>
   <string name="tab_source">Aplikacije</string>
   <string name="terabyteShort">TB</string>
+  <string name="text_input_layout_default_error">Ovo je zadana pogreška</string>
   <string name="text_select_all">Odaberi sve</string>
   <string name="text_select_nothing">Poništi odabir</string>
   <string name="thursday">Četvrtak</string>
@@ -938,6 +972,7 @@ Pokušajte premjestiti datoteke sa svog uređaja na Mi Drive."</string>
   <string name="v7_preference_on">UKLJUČENO</string>
   <string name="video_data_consume_dialog_confirm">Nastavi</string>
   <string name="video_data_consume_dialog_title">Koristiti mobilne podatke?</string>
+  <string name="view_decompress_files">Prikaz</string>
   <string name="view_mode_grid">Mreža</string>
   <string name="view_mode_list">Popis</string>
   <string name="view_type">Pregled</string>
