--- a/Croatian/main/MiuiAod.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiuiAod.apk/res/values-hr/strings.xml
@@ -175,7 +175,8 @@ dd.MM."</string>
   <string name="item_view_role_description">Kartica</string>
   <string name="kg_activity_label">Uređivanje zaključanog zaslona</string>
   <string name="kg_aod_settings_depth_video_toast">Samo prilagođeni Always-on zaslon podržan je kada se koristi efekt dubine</string>
-  <string name="kg_apply">Primijeni</string>
+  <string name="kg_apply">Primjeni</string>
+  <string name="kg_apply_dialog_desktop_preview">Pregled početnog zaslona</string>
   <string name="kg_apply_to_all_alert_dialog_negative_text">Samo zaključani zaslon</string>
   <string name="kg_apply_to_all_alert_dialog_positive_text">Oboje</string>
   <string name="kg_apply_to_all_alert_dialog_title">Primijeniti ovu pozadinu i na početni zaslon?</string>
@@ -220,6 +221,8 @@ dd.MM."</string>
   <string name="kg_classic_item_weather_cloudy">Oblačno</string>
   <string name="kg_classic_item_week">Tjedan</string>
   <string name="kg_classic_item_wind">Vjetar</string>
+  <string name="kg_classic_plus_clock_type_centered_horizontally">Vodoravno, središnje poravnato</string>
+  <string name="kg_classic_plus_clock_type_centered_vertically">Okomito, središnje poravnato</string>
   <string name="kg_classic_primary_color_label">Primarna boja</string>
   <string name="kg_classic_secondary_color_label">Sekundarna boja</string>
   <string name="kg_classic_signature_area_hint">Dodirnite za unos potpisa</string>
@@ -273,6 +276,11 @@ dd.MM."</string>
   <string name="kg_doodle_text_not_support_gallery_tip">"Wallpaper Carousel  ne podržava crteže"</string>
   <string name="kg_doodle_text_not_support_third_party_wallpaper_service_tip">"Pozadine trećih strana ne podržavaju crteže"</string>
   <string name="kg_doodle_text_not_support_wallpaper_tip">"Ova pozadina ne podržava crteže"</string>
+  <string name="kg_easternart_a_clock_type_vertical_clock">Okomiti sat</string>
+  <string name="kg_easternart_a_clock_type_vertical_clock_temperature_combination">Okomito, sat i temperatura</string>
+  <string name="kg_easternart_b_clock_type_horizontally">Vodoravno</string>
+  <string name="kg_easternart_b_clock_type_vertical">Okomito</string>
+  <string name="kg_easternart_c_clock_type_handwritten_fonts">Rukom pisano</string>
   <string name="kg_edit_cancel_dialog_content">Odbaciti sve promjene?</string>
   <string name="kg_edit_cancel_dialog_title">Odbaciti promjene?</string>
   <string name="kg_effects_not_support_gallery_tip">"Ne mogu postaviti efekte pri korištenju dijaprojekcije pozadine"</string>
@@ -285,6 +293,20 @@ dd.MM."</string>
   <string name="kg_exit">Izlaz</string>
   <string name="kg_font_filter_classic_primary_label">Primarni</string>
   <string name="kg_font_filter_classic_secondary_label">Sekundarno</string>
+  <string name="kg_font_filter_color_customize">Prilagođena boja</string>
+  <string name="kg_font_filter_color_default">Zadana boja</string>
+  <string name="kg_font_filter_color_grey">Siva</string>
+  <string name="kg_font_filter_color_light_green">Žuto-zelena</string>
+  <string name="kg_font_filter_color_light_purple">Ljubičasta</string>
+  <string name="kg_font_filter_color_pale_blue">Plava</string>
+  <string name="kg_font_filter_color_pale_green">Zelena</string>
+  <string name="kg_font_filter_color_pale_orange">Narančasta</string>
+  <string name="kg_font_filter_color_pale_pink">Ružičasta</string>
+  <string name="kg_font_filter_color_pale_pink_purple">Ružičasto-ljubičasta</string>
+  <string name="kg_font_filter_color_pale_purple">Plavo-ljubičasta</string>
+  <string name="kg_font_filter_color_pale_red">Crvena</string>
+  <string name="kg_font_filter_color_pale_yellow">Žuta</string>
+  <string name="kg_font_filter_color_white">Bijela</string>
   <string name="kg_font_filter_doodle_primary_label">Doodle</string>
   <string name="kg_font_filter_doodle_secondary_label">Pozadina</string>
   <string name="kg_font_filter_group_label_glow">Sjaj</string>
@@ -332,6 +354,26 @@ dd.MM."</string>
   <string name="kg_live_photo_land_tips">Vodoravne fotografije uživo mogu se postaviti samo kao statične fotografije</string>
   <string name="kg_magazine_a_b_primary_color_label">Sat</string>
   <string name="kg_magazine_a_b_secondary_color_label">Potpis</string>
+  <string name="kg_magazine_a_clock_type_center">Poravnaj u sredinu</string>
+  <string name="kg_magazine_a_clock_type_left">Poravnaj lijevo</string>
+  <string name="kg_magazine_a_clock_type_right">Poravnaj desno</string>
+  <string name="kg_magazine_b_signature_teype_reduce_word_spacing">Smanji razmak riječi</string>
+  <string name="kg_magazine_b_signature_type_ends_horizontal_row_aligned">Obostrano poravnanje</string>
+  <string name="kg_magazine_b_signature_type_horizontal_row_centered">Vodoravno, središnje poravnato</string>
+  <string name="kg_magazine_b_signature_type_horizontal_row_left">Vodoravno, lijevo poravnato</string>
+  <string name="kg_magazine_b_signature_type_horizontal_row_right">Vodoravno, desno poravnato</string>
+  <string name="kg_magazine_b_signature_type_increase_font_size">Povećaj veličinu teksta</string>
+  <string name="kg_magazine_b_signature_type_increase_line_spacing">Povećaj prored</string>
+  <string name="kg_magazine_b_signature_type_increase_word_spacing">Povećaj razmak između riječi</string>
+  <string name="kg_magazine_b_signature_type_reduce_font_size">Smanji veličinu teksta</string>
+  <string name="kg_magazine_b_signature_type_reduce_line_spacing">Smanji prored</string>
+  <string name="kg_magazine_b_signature_type_sans_serif_font">Sans serif</string>
+  <string name="kg_magazine_b_signature_type_vertical_row_to_left">Okomito, lijevo poravnato</string>
+  <string name="kg_magazine_b_signature_type_vertical_row_to_right">Okomito, desno poravnato</string>
+  <string name="kg_magazine_c_clock_type_bold_stroke_combinatio">Polupodebljano, poluobris</string>
+  <string name="kg_magazine_c_clock_type_extra_bold">Izuzetno podebljano</string>
+  <string name="kg_magazine_c_clock_type_stroke">Obris</string>
+  <string name="kg_magazine_c_clock_type_three_lines_bold">Trostruko podebljano</string>
   <string name="kg_magazine_c_primary_color_label">Drugi tekst</string>
   <string name="kg_magazine_c_secondary_color_label">Minute</string>
   <string name="kg_main_add_template_forbidden_toast">"Nije moguće dodati više zaključanih zaslona. Možete izbrisati neke od njih da dodate nove."</string>
