--- a/Croatian/main/Notes.apk/res/values-hr/strings.xml
+++ b/Croatian/main/Notes.apk/res/values-hr/strings.xml
@@ -55,8 +55,14 @@
   <string name="adopt">Koristite</string>
   <string name="ai_already_copy_toast_text">Uspješno kopirano</string>
   <string name="ai_already_insert_toast_text">Umetnuti original</string>
+  <string name="ai_button_cancel">Odustani</string>
+  <string name="ai_button_close">Isključi</string>
+  <string name="ai_button_retry">Pokušajte ponovno</string>
   <string name="ai_complete_summary_title">Sažetak</string>
   <string name="ai_content_generates_reminders">Ovaj sadržaj generirao je AI i pruža se samo kao referenca.</string>
+  <string name="ai_dialog_cancel_message">Pokušajte isključiti podršku za računalstvo kako biste mogli koristiti AI pisanje u oblaku.</string>
+  <string name="ai_dialog_retry_message">Dodirnite tipku u nastavku za ponovni pokušaj.</string>
+  <string name="ai_dialog_title">"Sada ne možete koristiti ovu značajku"</string>
   <string name="ai_generate_stop_button">Zaustavi</string>
   <string name="ai_generating_check">Lektura teksta…</string>
   <string name="ai_generating_title">Generiranje…</string>
@@ -67,6 +73,7 @@
   <string name="ai_multiple_violations_permanent_ban_title">"Prekršili ste naše smjernice i trajno vam je zabranjeno korištenje ove značajke"</string>
   <string name="ai_multiple_violations_temporary_ban_title">"Prekršili ste naše smjernice i privremeno vam je zabranjeno korištenje ove značajke"</string>
   <string name="ai_no_error">Nisu pronađene pogreške</string>
+  <string name="ai_progress_dialog_message">Povezivanje uređaja…</string>
   <string name="ai_recommend_send_icon_talkback_text">Pošalji</string>
   <string name="ai_search_hint_text">Unesite svoje upite</string>
   <string name="ai_text_widget_cancel">Odustani</string>
@@ -91,22 +98,24 @@
   <string name="ai_when_mistake_title">Došlo je do greške. Pokušajte ponovno.</string>
   <string name="ai_writing_invite_beta_testing_content">Ova značajka koristi velike mogućnosti modela za lektoriranje, proširenje, sažetak i poliranje vašeg teksta. Također možete unijeti upite i pustiti AI da piše umjesto vas. Dodirnite \"Slažem se\" da isprobate!</string>
   <string name="ai_writing_invite_beta_testing_title">Beta testiranje AI pisanja</string>
+  <string name="ai_writing_local_message">Koristite modele na uređaju za AI pisanje</string>
   <string name="aicr_download_confirm">Preuzimanje</string>
   <string name="aicr_download_content">Preuzmite potrebne velike modele kako biste mogli koristiti značajke AI pisanja. Preuzeti sada?</string>
   <string name="aicr_download_title">Preuzmi veliki model</string>
   <string name="ai_check">Lektura umjetnom inteligencijom</string>
   <string name="ai_failed">"Nije moguće generirati. Pokušajte ponovo."</string>
   <string name="ai_feature_disabled">Više puta ste prekršili naše standarde zajednice. Ova značajka više nije dostupna.</string>
-  <string name="ai_label">Značajke umjetne inteligencije</string>
-  <string name="ai_layout">Izgled umjetne inteligencije</string>
-  <string name="ai_local_device_low_battery_title">Niska baterija. Napunite i pokušajte ponovno.</string>
+  <string name="ai_label">AI Značajke</string>
+  <string name="ai_layout">AI Izgled</string>
+  <string name="ai_llm_dis_connect_error_message">Sesija računalne podrške je prekinuta. Provjerite mrežne postavke i pokušajte ponovno.</string>
+  <string name="ai_local_device_low_battery_title">Slaba baterija. Napunite i pokušajte ponovno.</string>
   <string name="ai_local_device_over_heat_title">Uređaj se pregrijao. Pokušajte ponovno kasnije.</string>
   <string name="ai_local_language_unsupported_title">"Ovaj jezik nije podržan"</string>
   <string name="ai_local_network_error_title">Povežite se na mrežu i pokušajte ponovo</string>
-  <string name="ai_result_warn">Gornji sadržaj generirao je umjetna inteligencija. Točnost može varirati.</string>
+  <string name="ai_result_warn">Gornji sadržaj generirao je AI. Točnost može varirati.</string>
   <string name="ai_search_database_building_progress">Analiziranje bilješki radi pružanja preciznijih rezultata…</string>
   <string name="ai_sensitive_content_warn">"Ne mogu koristiti AI značajke za osjetljiv ili neprikladan sadržaj"</string>
-  <string name="ai_summary">Sažetak umjetne inteligencije</string>
+  <string name="ai_summary">AI Sažetak</string>
   <string name="ai_translate">AI prijevod</string>
   <string name="ai_chat_declare_double_link"><Data>Pročitajte i prihvatite naš &lt;a href=\"%1$s\">Korisnički ugovor&lt;/a> i &lt;a href=\"%2$s\" >Pravila o privatnosti&lt;/a> prije nego nastavite.</Data></string>
   <string name="ai_chat_dlg_content">Za različite izvore informacija u različitim scenarijima (kao što su veze ili tekst koji se pojavljuju u aplikacijama kao što su preglednici, WeChat i Feishu), funkcija brzog prikupljanja i sažimanja informacija, kao i njihovo automatsko generiranje i predstavljanje u objedinjenom unosu za arhiviranje, može se postići.</string>
@@ -163,7 +172,11 @@
   <string name="audio_toast_network_is_not_available">"Ne mogu se povezati na mrežu"</string>
   <string name="auto_detected">Automatsko otkrivanje</string>
   <string name="blackboard_note">Pametna ploča</string>
-  <string name="bottomsheet_action_expand_halfway">Proširi donju polovicu</string>
+  <string name="bottomsheet_action_collapse">Sažmi donji list</string>
+  <string name="bottomsheet_action_expand">Proširi donji list</string>
+  <string name="bottomsheet_action_expand_halfway">Proširi do pola</string>
+  <string name="bottomsheet_drag_handle_clicked">Dvaput dodirnuta ručica za povlačenje</string>
+  <string name="bottomsheet_drag_handle_content_description">Ručka za povlačenje</string>
   <string name="brush_AirBrush">AirBrush</string>
   <string name="brush_BallpointPen">BallpointPen</string>
   <string name="brush_Bamboo1">Bamboo1</string>
@@ -211,6 +224,13 @@
   <string name="button_new_note">"Novo"</string>
   <string name="call_folder_name">Bilješke poziva</string>
   <string name="call_record_folder_name">Bilješke poziva</string>
+  <string name="call_notification_answer_action">Odgovor</string>
+  <string name="call_notification_answer_video_action">Video</string>
+  <string name="call_notification_decline_action">Odbij</string>
+  <string name="call_notification_hang_up_action">Prekini vezu</string>
+  <string name="call_notification_incoming_text">Dolazni poziv</string>
+  <string name="call_notification_ongoing_text">Poziv u tijeku</string>
+  <string name="call_notification_screening_text">Provjera dolaznog poziva</string>
   <string name="cancel_alarm_description">Otkaži alarm</string>
   <string name="canvas_is_too_large_to_share">Ova je stavka prevelika za dijeljenje</string>
   <string name="canvas_is_too_large_to_share_phone">Ova je stavka prevelika za dijeljenje</string>
@@ -452,12 +472,14 @@ Dodirnite + da napravite mapu"</string>
   <string name="main_body">Cijeli tekst</string>
   <string name="manage_folders">Upravljanje mapama</string>
   <string name="material_clock_toggle_content_description">Odaberite prijepodne ili poslijepodne</string>
+  <string name="material_hour_24h_suffix">%1$s sati</string>
   <string name="material_hour_selection">Odaberite sat</string>
   <string name="material_hour_suffix">%1$s h</string>
   <string name="material_minute_selection">Odaberite minute</string>
   <string name="material_minute_suffix">%1$s min</string>
-  <string name="material_slider_range_end">Kraj raspona,</string>
-  <string name="material_slider_range_start">Početak raspona,</string>
+  <string name="material_slider_range_end">Kraj raspona</string>
+  <string name="material_slider_range_start">Početak raspona</string>
+  <string name="material_slider_value">Vrijednost</string>
   <string name="material_timepicker_clock_mode_description">Prebacite se na način rada sata za unos vremena.</string>
   <string name="material_timepicker_hour">Sat</string>
   <string name="material_timepicker_minute">Minuta</string>
@@ -640,6 +662,9 @@ Dodirnite + da napravite mapu"</string>
   <string name="month_september_shortest">R</string>
   <string name="more">Više</string>
   <string name="mtrl_badge_numberless_content_description">Nova obavijest</string>
+  <string name="mtrl_checkbox_state_description_checked">Označeno</string>
+  <string name="mtrl_checkbox_state_description_indeterminate">Djelomično označeno</string>
+  <string name="mtrl_checkbox_state_description_unchecked">Nije označeno</string>
   <string name="mtrl_chip_close_icon_content_description">Ukloni %1$s</string>
   <string name="mtrl_exceed_max_badge_number_content_description">Više od %1$d novih obavijesti</string>
   <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
@@ -652,7 +677,9 @@ Dodirnite + da napravite mapu"</string>
   <string name="mtrl_picker_date_header_title">Odaberite datum</string>
   <string name="mtrl_picker_date_header_unselected">Odaberite datum</string>
   <string name="mtrl_picker_day_of_week_column_header">Kolona dana: %1$s</string>
+  <string name="mtrl_picker_end_date_description">Datum završetka %1$s</string>
   <string name="mtrl_picker_invalid_format">Pogrešan format.</string>
+  <string name="mtrl_picker_navigate_to_current_year_description">Navigacija do tekuće godine %1$d</string>
   <string name="mtrl_picker_invalid_format_example">Primjer: %1$s</string>
   <string name="mtrl_picker_invalid_format_use">Koristi: %1$s</string>
   <string name="mtrl_picker_invalid_range">Pogrešan raspon.</string>
@@ -664,16 +691,20 @@ Dodirnite + da napravite mapu"</string>
   <string name="mtrl_picker_range_header_title">Odaberite raspon datuma</string>
   <string name="mtrl_picker_range_header_unselected">Datum početka - Datum završetka</string>
   <string name="mtrl_picker_save">Spremi</string>
+  <string name="mtrl_picker_start_date_description">Datum početka %1$s</string>
   <string name="mtrl_picker_text_input_date_hint">Datum</string>
   <string name="mtrl_picker_text_input_date_range_end_hint">Datum završetka</string>
   <string name="mtrl_picker_text_input_date_range_start_hint">Datum početka</string>
   <string name="mtrl_picker_text_input_day_abbr">d</string>
   <string name="mtrl_picker_text_input_month_abbr">m</string>
-  <string name="mtrl_picker_text_input_year_abbr">y</string>
+  <string name="mtrl_picker_text_input_year_abbr">g</string>
+  <string name="mtrl_picker_today_description">Danas %1$s</string>
   <string name="mtrl_picker_toggle_to_calendar_input_mode">Prebacite se na način unosa kalendara</string>
   <string name="mtrl_picker_toggle_to_day_selection">Dodirnite za prelazak na odabir dana</string>
   <string name="mtrl_picker_toggle_to_text_input_mode">Prebacite se na način unosa teksta</string>
   <string name="mtrl_picker_toggle_to_year_selection">Dodirnite za prelazak na odabir godine</string>
+  <string name="mtrl_timepicker_cancel">Odustani</string>
+  <string name="mtrl_timepicker_confirm">U redu</string>
   <string name="net_error">Došlo je do mrežne pogreške</string>
   <string name="network_error_info">Došlo je do mrežne pogreške. Provjerite mrežne postavke i pokušajte ponovno.</string>
   <string name="network_timeout_info">"Ne mogu se povezati s mrežom. Pokušajte ponovno."</string>
@@ -722,6 +753,7 @@ Dodirnite + da napravite mapu"</string>
   <string name="notelist_menu_new">Dodaj bilješku</string>
   <string name="notes_description_content">"Bilješke su sistemska aplikacija. Nećete moći koristiti ovu aplikaciju nakon što je deinstalirate."</string>
   <string name="notes_description_title">Deinstalirati Bilješke?</string>
+  <string name="notice_for_ai_search_tips">Prikaz pojedinosti</string>
   <string name="notification_content_add_todo_from_other_app">Dodali ste novi zadatak. Dodirnite za prikaz.</string>
   <string name="notify_alarm_title">Podsjetnik bilješke</string>
   <string name="option_menu_delete">Izbriši</string>
@@ -824,6 +856,7 @@ Dodirnite + da napravite mapu"</string>
   <string name="pref_title_font_size">Veličina fonta</string>
   <string name="pref_title_note_style">Stil</string>
   <string name="pref_title_quick_note">Brze bilješke</string>
+  <string name="pref_title_quick_note_talkback">Brze bilješke, dvaput kliknite i kliznite udesno za ulazak na stranicu s brzim bilješkama</string>
   <string name="pref_title_recover_help">Obnovi bilješke</string>
   <string name="pref_title_show_root_folder_in_homepage">Prikaži samo brze bilješke na početnoj stranici</string>
   <string name="pref_title_skip_confirm_for_quick_delete">Izbrišite pomoću gesta</string>
@@ -908,6 +941,8 @@ Dodirnite + da napravite mapu"</string>
   <string name="search_menu_title">Traži</string>
   <string name="search_path_notes">Aplikacije sustava/Bilješke</string>
   <string name="search_setting_description">Pretražite tekst u vašim bilješkama</string>
+  <string name="searchview_clear_text_content_description">Izbriši tekst</string>
+  <string name="searchview_navigation_content_description">Natrag</string>
   <string name="select_account_prompt">Sink. bilješke</string>
   <string name="select_text_before_using">Odaberite tekst prije korištenja ove značajke</string>
   <string name="send">Pošalji</string>
