--- a/Croatian/main/SoundRecorder.apk/res/values-hr/strings.xml
+++ b/Croatian/main/SoundRecorder.apk/res/values-hr/strings.xml
@@ -27,6 +27,10 @@
   <string name="abc_shareactionprovider_share_with">Dijeljenje sa</string>
   <string name="abc_shareactionprovider_share_with_application">Dijeli putem aplikacije %s</string>
   <string name="abc_toolbar_collapse_description">Sažmi</string>
+  <string name="accessibility_sliding_button_state_description_off">Isključeno</string>
+  <string name="accessibility_sliding_button_state_description_on">Uključeno</string>
+  <string name="accessibility_tab_state_description_unselect">Nije odabrano</string>
+  <string name="accessibility_tab_statedesc_unselect">Nije odabrano</string>
   <string name="access_denied_info">Previše pokušaja. Pričekajte minutu ili dvije i pokušajte ponovno.</string>
   <string name="account_crop_user_avatar">Obreži fotografiju</string>
   <string name="account_empty_user_name">Unesite svoje korisničko ime za Xiaomi račun</string>
@@ -218,6 +222,7 @@ Pošaljite ovaj kod nadzorniku."</string>
   <string name="invisible_mode_dialog_title">"Vi ste anonimni"</string>
   <string name="invisible_mode_error_tip">Isključite anonimni način rada u postavkama da biste mogli koristiti mikrofon</string>
   <string name="item_view_role_description">Kartica</string>
+  <string name="keyguard_shotcuts">Nova snimka</string>
   <string name="keywords_search_call_record">Snimanje poziva;Snimi poziv;Snimanje poziva;Snimke poziva</string>
   <string name="keywords_search_record">Novo snimka;Dodajte snimku;Snimanje;Snimke;Prijepis;Transkribiraj;Snimač;Snimač govora;Snimač zvuka;Snimač;Snimanje;Kako mogu snimiti;Kako snimiti zvuk;Gdje je diktafon;MIUI Snimač</string>
   <string name="keywords_search_record_list">Snimač;Prijepis;Transkribiraj;Snimi;Share recording;Dijelite snimke;Snimanje;Snimke</string>
@@ -267,7 +272,13 @@ Pošaljite ovaj kod nadzorniku."</string>
   <string name="middle_bit_rate">MP3, ~%1$d kbps, ~%2$d MB/h</string>
   <string name="mishop_login_other">Drugi račun</string>
   <string name="miuix_access_state_desc">Odabrano</string>
+  <string name="miuix_accessibility_title">Naslov</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
+  <string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
+  <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
+  <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izađi iz načina uređivanja</string>
+  <string name="miuix_appcompat_accessibility_new_message">Nova obavijest</string>
+  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Uđite u način uređivanja</string>
   <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_action_mode_title_empty">Odaberi stavke</string>
@@ -288,6 +299,17 @@ Pošaljite ovaj kod nadzorniku."</string>
   <string name="miuix_appcompat_select_all_description">Odaberi sve</string>
   <string name="miuix_appcompat_select_item">Odaberi stavke</string>
   <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_close">Pomaknite se prema dolje za zatvaranje</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_half_screen">Pomaknite se prema dolje do pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_minimized">Pomaknite se prema dolje do minimiziranog</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_half_screen">Pomakni se do pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_maximized">Pomičite se gore do maksimiziranja</string>
+  <string name="miuix_bottom_sheet_accessibility_state_half_screen">Pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_state_maximized">Maksimizirano</string>
+  <string name="miuix_bottom_sheet_accessibility_state_minimized">Minimizirano</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_half_screen">Prebačeno na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_maximized">Prebačeno na maksimizirano</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_minimized">Prebačeno na minimizirano</string>
   <string name="miuix_indexer_collect">Zbirke</string>
   <string name="miuix_indexer_selected">Odabrano %s</string>
   <string name="miuix_item_view_role_description">Kartica</string>
@@ -297,6 +319,7 @@ Pošaljite ovaj kod nadzorniku."</string>
   <string name="miuix_navigator_multiple_choice">Odaberi</string>
   <string name="miuix_navigator_navigator_switch_description">Sakrij bočnu traku</string>
   <string name="miuix_popup_window_default_title">Skočni prozor</string>
+  <string name="miuix_progressbar_loading">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_pull_to_refresh">Povuci za osvježiti</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshed">Gotovo</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshing">Osvježavanje</string>
@@ -305,6 +328,9 @@ Pošaljite ovaj kod nadzorniku."</string>
   <string name="miuix_sbl_tracking_progress_labe_up_none">"To je sve za sada"</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh_fail">"Ne mogu učitati stavke"</string>
+   <string name="miuix_show_password">Prikaži zaporku</string>
+  <string name="miuix_stretchablewidget_collapsed">Zatvoreno</string>
+  <string name="miuix_stretchablewidget_expanded">Prošireno</string>
   <string name="monday">Ponedjeljak</string>
   <string name="monday_short">Pon</string>
   <string name="monday_shortest">P</string>
@@ -863,6 +889,7 @@ Dodirnite \"%1$s\", a zatim odaberite \"%2$s\"."</string>
   <string name="text_for_build_database_progress_state_running">Analiziranje snimaka radi dobivanja preciznijih rezultata…</string>
   <string name="text_for_build_database_progress_state_stooping">"Snimke će se analizirati na vašem uređaju kako bi se dobili precizniji rezultati.
 Trenutno pauzirano. Analiza će se nastaviti kada ne budete koristili uređaj."</string>
+  <string name="text_input_layout_default_error">Ovo je zadana pogreška</string>
   <string name="text_play_speed_0_5">Brzina reprodukcije 0.5X</string>
   <string name="text_play_speed_1_0">Normalna brzina reprodukcije</string>
   <string name="text_play_speed_1_5">Brzina reprodukcije 1.5X</string>
