--- a/Croatian/main/Email.apk/res/values-hr/strings.xml
+++ b/Croatian/main/Email.apk/res/values-hr/strings.xml
@@ -33,6 +33,10 @@
     <string name="about_checking_update">Provjera ažuriranja…</string>
     <string name="about_go_to_update">Ažuriraj</string>
     <string name="about_lasted_version">Trenutna verzija je ažurirana</string>
+  	 <string name="accessibility_sliding_button_state_description_off">Isključeno</string>
+    <string name="accessibility_sliding_button_state_description_on">Uključeno</string>
+    <string name="accessibility_tab_state_description_unselect">Nije odabrano</string>
+    <string name="accessibility_tab_statedesc_unselect">Nije odabrano</string>
     <string name="account_add_other_sub_des">Ostali računi</string>
     <string name="account_add_title">Odaberite uslugu e-pošte</string>
     <string name="account_change">Promijenite račune</string>
@@ -398,7 +402,7 @@ IMAP putanje"</string>
     <string name="download_before_sharing2">"Neke od odabranih stavki nisu preuzete. Prvo ih preuzmite."</string>
     <string name="download_cancel_confirm_message">Preuzimanje će biti zaustavljeno</string>
     <string name="download_cancel_confirm_title">Preuzeti ovaj privitak?</string>
-    <string name="download_confirm_message">Preuzeti privitak: %1$s?</string>
+    <string name="download_confirm_message">Ovaj će privitak zauzeti oko %1$s prostora za pohranu. Preuzeti sada?</string>
     <string name="download_confirm_title">Preuzimanje privitka</string>
     <string name="download_message_failed_for_too_large">Poruka je prevelika za preuzimanje.</string>
     <string name="drawer_contacts">Kontakti</string>
@@ -693,8 +697,20 @@ Ovaj problem može biti uzrokovan dvofaktorskom autentifikacijom računa. Pokuš
     <string name="message_invite_tentative">Možda</string>
     <string name="message_view_attachment_background_load">Jedan ili više privitaka u proslijeđenoj poruci preuzet će se prije slanja.</string>
     <string name="mi_slide_menu">Bočna traka</string>
+	 <string name="microsoft_imap_outlook_download_recommend_content_link">Outlook klijent</string>
+    <string name="microsoft_imap_outlook_download_recommend_tip">Također možete koristiti Outlook klijent za pristup više značajki e-pošte.</string>
+    <string name="microsoft_imap_setting_tip">"Ne mogu sinkronizirati e-poštu. Dodirnite za rješavanje problema."</string>
+    <string name="microsoft_imap_tips_dialog_confirm">Razumijem</string>
+    <string name="microsoft_imap_tips_dialog_content_step_desc">Idite na Postavke > Pošta > Prosljeđivanje i IMAP, zatim omogućite IMAP i POP.</string>
+    <string name="microsoft_imap_tips_dialog_content_step_title">Koraci</string>
+    <string name="microsoft_imap_tips_dialog_tips">Posjetite outlook.com na svom računalu i omogućite IMAP da biste mogli sinkronizirati e-poštu.</string>
+    <string name="microsoft_imap_tips_dialog_title">Omogući IMAP</string>
     <string name="miuix_access_state_desc">Odabrano</string>
+	 <string name="miuix_accessibility_title">Naslov</string>
     <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
+	 <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Završi način rada za uređivanje</string>
+    <string name="miuix_appcompat_accessibility_new_message">Nova poruka</string>
+    <string name="miuix_appcompat_accessibility_start_edit_action_mode">Pokreni način rada za uređivanje</string>
     <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
     <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
     <string name="miuix_appcompat_action_mode_title_empty">Odaberi stavke</string>
@@ -710,8 +726,22 @@ Ovaj problem može biti uzrokovan dvofaktorskom autentifikacijom računa. Pokuš
     <string name="miuix_appcompat_select_all">Odaberi sve</string>
     <string name="miuix_appcompat_select_all_description">Odaberi sve</string>
     <string name="miuix_appcompat_select_item">Odaberi stavke</string>
+	 <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
+    <string name="miuix_bottom_sheet_accessibility_scroll_down_to_close">Pomaknite se prema dolje za zatvaranje</string>
+    <string name="miuix_bottom_sheet_accessibility_scroll_down_to_half_screen">Pomaknite se prema dolje do pola zaslona</string>
+    <string name="miuix_bottom_sheet_accessibility_scroll_down_to_minimized">Pomaknite se prema dolje do minimiziranog</string>
+    <string name="miuix_bottom_sheet_accessibility_scroll_up_to_half_screen">Pomakni se do pola zaslona</string>
+    <string name="miuix_bottom_sheet_accessibility_scroll_up_to_maximized">Pomičite se gore do maksimiziranja</string>
+    <string name="miuix_bottom_sheet_accessibility_state_half_screen">Pola zaslona</string>
+    <string name="miuix_bottom_sheet_accessibility_state_maximized">Maksimizirano</string>
+    <string name="miuix_bottom_sheet_accessibility_state_minimized">Minimizirano</string>
+    <string name="miuix_bottom_sheet_accessibility_switch_to_half_screen">Prebačen na pola zaslona</string>
+    <string name="miuix_bottom_sheet_accessibility_switch_to_maximized">Prebačeno na maksimizirano</string>
+    <string name="miuix_bottom_sheet_accessibility_switch_to_minimized">Prebačeno na minimizirano</string>
     <string name="miuix_indexer_collect">Zbirke</string>
     <string name="miuix_indexer_selected">Odabrano %s</string>
+	 <string name="miuix_popup_window_default_title">Skočni prozor</string>
+    <string name="miuix_progressbar_loading">Samo trenutak…</string>
     <string name="miuix_sbl_tracking_progress_labe_pull_to_refresh">Povuci za osvježiti</string>
     <string name="miuix_sbl_tracking_progress_labe_refreshed">Gotovo</string>
     <string name="miuix_sbl_tracking_progress_labe_refreshing">Osvježavanje</string>
@@ -720,6 +750,7 @@ Ovaj problem može biti uzrokovan dvofaktorskom autentifikacijom računa. Pokuš
     <string name="miuix_sbl_tracking_progress_labe_up_none">"To je sve za sada"</string>
     <string name="miuix_sbl_tracking_progress_labe_up_refresh">Samo trenutak…</string>
     <string name="miuix_sbl_tracking_progress_labe_up_refresh_fail">"Ne mogu učitati stavke"</string>
+	 <string name="miuix_show_password">Prikaži zaporku</string>
     <string name="miuix_search_action_mode_cancel">Odustani</string>
     <string name="miuix_search_history_clear">Izbriši povijest pretraživanja</string>
     <string name="miuix_search_history_default_title">Povijest pretraživanja</string>
@@ -1130,6 +1161,7 @@ Pričekajte dok se ne sinkronizira u potpunosti ili pogledate poruku na računal
     <string name="system_setup_open_error">"Nije moguće pozvati sinkronizaciju računa, uključite "postavljanje" sustava u računu za sinkronizaciju e-pošte"</string>
     <string name="tap_to_configure">Dodirnite za postavljanje</string>
     <string name="tell_you_later">Kasnije</string>
+	 <string name="text_input_layout_default_error">Ovo je zadana pogreška</string>
     <string name="three_day">3 dana</string>
     <string name="thursday">Četvrtak</string>
     <string name="thursday_short">Čet</string>
