--- a/Croatian/main/MiMover.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiMover.apk/res/values-hr/strings.xml
@@ -44,6 +44,10 @@
   <string name="abc_shareactionprovider_share_with">Dijeljenje sa</string>
   <string name="abc_shareactionprovider_share_with_application">Dijeli putem aplikacije %s</string>
   <string name="abc_toolbar_collapse_description">Sažmi</string>
+  <string name="accessibility_sliding_button_state_description_off">Isključeno</string>
+  <string name="accessibility_sliding_button_state_description_on">Uključeno</string>
+  <string name="accessibility_tab_state_description_unselect">Nije odabrano</string>
+  <string name="accessibility_tab_statedesc_unselect">Nije odabrano</string>
   <string name="account_or_password_incorrect">Pogrešan ID računa ili zaporka</string>
   <string name="actionbar_button_up_description">Natrag</string>
   <string name="address">Adresa</string>
@@ -225,7 +229,7 @@ Zaštitit ćemo Vaše osobne podatke u skladu sa važećim zakonima, odredbama i
   <string name="dialog_request_permission_message_extra_summary">Ova su dopuštenja potrebna kako bi se omogućile osnovne značajke i usluge ove aplikacije.</string>
   <string name="dialog_request_permission_message_extra_title">Obavezna dopuštenja</string>
   <string name="dialog_request_permission_message_global">Ova aplikacija treba sljedeća dopuštenja da bi mogla normalno raditi:</string>
-  <string name="dialog_request_permission_message_link" formatted="false">&lt;Data&gt;"Dopustite ovoj aplikaciji da se poveže s internetom i dajte gore navedena potrebna dopuštenja. Dodatno, kako biste u potpunosti razumjeli svoja prava kao korisnika kao i načine na koje koristimo vaše podatke, pročitajte i prihvatite naše &amp;lt;a href='%1s'&amp;gt;Korisnički ugovor&amp;lt;/a&amp;gt; i &amp;lt;a href='%2s'&amp;gt;Pravila o privatnosti&amp;lt;/a&amp;gt;."&lt;/Data&gt;</string>
+  <string formatted="false" name="dialog_request_permission_message_link"><Data>"Dopustite ovoj aplikaciji da se poveže s internetom i dodijelite gore navedena obavezna dopuštenja. Kako biste u potpunosti razumjeli svoja prava kao korisnika kao i načine na koje koristimo vaše podatke, pročitajte i prihvatite naše &lt;a href='%1s'>Korisnički ugovor za operativni sustav Xiaomi&lt;/a> and &lt;a href='%2s'>Mi Mover Pravila o privatnosti&lt;/a>."</Data></string>
   <string name="dialog_request_permission_message_provision_link">Dopustite ovoj aplikaciji da se poveže s internetom i dajte gore navedena potrebna dopuštenja. Dodatno, kako biste u potpunosti razumjeli svoja prava kao korisnika kao i načine na koje koristimo vaše podatke, pročitajte i prihvatite naše %1$s i %2$s.</string>
   <string name="dialog_request_permission_title">Pažnja</string>
   <string name="dialog_request_permission_title_global">Potrebna dopuštenja</string>
@@ -250,7 +254,7 @@ Otvorite WeChat i idite na Ja &gt; Postavke &gt; Općenito &gt; Sigurnosno kopir
   <string name="err_no_gms">Nekompatibilna verzija aplikacije. Instalirajte ovu aplikaciju zasebno.</string>
   <string name="err_not_allow">Nije podržano</string>
   <string name="err_pkg_not_exist">Ne mogu pronaći aplikaciju.</string>
-  <string name="err_receiver_no_space">"Nije moguće prenijeti. Nema dovoljno prostora za pohranu na novom uređaju."</string>
+  <string name="err_receiver_no_space">"Prijenos nije moguć. Nema dovoljno prostora za pohranu na novom uređaju."</string>
   <string name="err_remote_no_space">Nema dovoljno prostora za pohranu na novom uređaju</string>
   <string name="err_remote_timeout">Isteklo je vrijeme prijenosa</string>
   <string name="err_send_error">"Ne mogu poslati"</string>
@@ -270,7 +274,7 @@ Otvorite WeChat i idite na Ja &gt; Postavke &gt; Općenito &gt; Sigurnosno kopir
   <string name="feed_back">Povratna informacija</string>
   <string name="feedback_desc">Opišite problem na koji ste naišli</string>
   <string name="finished">Gotovo</string>
-  <string name="force_update_button_neutral_guest">Shvaćam</string>
+  <string name="force_update_button_neutral_guest">Razumijem</string>
   <string name="force_update_button_scan_host">Instaliraj</string>
   <string name="force_update_content_guest">Ažurirajte Mi Mover na novom uređaju da biste mogli prenositi stavke.</string>
   <string name="force_update_content_host">Ažurirajte Mi Mover na starom uređaju da biste mogli prenositi stavke.</string>
@@ -450,7 +454,13 @@ Otvorite WeChat i idite na Ja &gt; Postavke &gt; Općenito &gt; Sigurnosno kopir
   <string name="miui_wait_link_title_1">"%d. Dodirnite \"Ja sam pošiljatelj\" i pričekajte trenutak."</string>
   <string name="miui_wait_link_title_2">%d. Odaberite ovaj hotspot na starom uređaju za povezivanje.</string>
   <string name="miuix_access_state_desc">Odabrano</string>
-  <string name="miuix_alphabet_indexer_name">Indeksna traka</string>
+  <string name="miuix_accessibility_title">Naslov</string>
+  <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
+  <string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
+  <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
+  <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izađi iz načina uređivanja</string>
+  <string name="miuix_appcompat_accessibility_new_message">Nova obavijest</string>
+  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Uđite u način uređivanja</string>
   <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_action_mode_title_empty">Odaberi stavke</string>
@@ -471,7 +481,7 @@ Otvorite WeChat i idite na Ja &gt; Postavke &gt; Općenito &gt; Sigurnosno kopir
   <string name="miuix_appcompat_select_item">Odaberi stavke</string>
   <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
   <string name="miuix_indexer_collect">Zbirke</string>
-  <string name="miuix_indexer_selected">Odabrano %s</string>
+  <string name="miuix_progressbar_loading">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_pull_to_refresh">Povuci za osvježiti</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshed">Gotovo</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshing">Osvježavanje</string>
@@ -480,6 +490,9 @@ Otvorite WeChat i idite na Ja &gt; Postavke &gt; Općenito &gt; Sigurnosno kopir
   <string name="miuix_sbl_tracking_progress_labe_up_none">"To je sve za sada"</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh_fail">"Ne mogu učitati stavke"</string>
+  <string name="miuix_show_password">Prikaži zaporku</string>
+  <string name="miuix_stretchablewidget_collapsed">Zatvoreno</string>
+  <string name="miuix_stretchablewidget_expanded">Prošireno</string>
   <string name="mms">MMS</string>
   <string name="mms_contacts_calllog">Poruke, kontakti i povijest poziva</string>
   <string name="monday">Ponedjeljak</string>
@@ -891,6 +904,7 @@ Oslobodite barem %s."</string>
   <string name="task_backup_cancel_progress">Otkazivanje…</string>
   <string name="task_canceled_all_local">Otkazano</string>
   <string name="task_pending">Na čekanju…</string>
+  <string name="text_input_layout_default_error">Ovo je zadana pogreška</string>
   <string name="text_timeout_retry">"Ne mogu se povezati. Pokušajte ponovo."</string>
   <string name="thursday">Četvrtak</string>
   <string name="thursday_short">Čet</string>
