--- a/Croatian/main/MiuiWallpaper.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiuiWallpaper.apk/res/values-hr/strings.xml
@@ -103,7 +103,7 @@ Mawrth Vallis"</string>
     <string name="mars_view_height_2">286.2 km</string>
     <string name="mi_wallpaper_loading">Učitavanje…</string>
     <string name="mi_wallpaper_title"> Mi Pozadina</string>
-    <string name="midnight">AM</string>
+	 <string name="miuix_access_state_desc">Odabrano</string>
     <string name="miui_clock_city_name_local">Lokalno</string>
     <string name="miui_clock_city_name_second">Drugi sat</string>
     <string name="miui_lock_screen_date">dd.MM EEEE</string>
