--- a/Croatian/main/XiaomiAccount.apk/res/values-hr/strings.xml
+++ b/Croatian/main/XiaomiAccount.apk/res/values-hr/strings.xml
@@ -29,6 +29,10 @@
   <string name="abc_toolbar_collapse_description">Sažmi</string>
   <string name="about_device_info">Prikaži pojedinosti o uređaju</string>
   <string name="about_mi_account">O Xiaomi računu</string>
+  <string name="accessibility_sliding_button_state_description_off">Isključeno</string>
+  <string name="accessibility_sliding_button_state_description_on">Uključeno</string>
+  <string name="accessibility_tab_state_description_unselect">Nije odabrano</string>
+  <string name="accessibility_tab_statedesc_unselect">Nije odabrano</string>
   <string name="accept">Dopusti</string>
   <string name="access_token_expired_warning">Weibo račun je istekao</string>
   <string name="access_token_invalid_warning">Weibo račun je nevažeći</string>
@@ -391,7 +395,13 @@ Pošaljite ovaj kod našem tehničaru."</string>
   <string name="mipay_others">Ostalo</string>
   <string name="mipay_transit_card">Prometna kartica</string>
   <string name="miuix_access_state_desc">Odabrano</string>
+  <string name="miuix_accessibility_title">Naslov</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
+  <string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
+  <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
+  <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izađi iz načina uređivanja</string>
+  <string name="miuix_appcompat_accessibility_new_message">Nova obavijest</string>
+  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Uđite u način uređivanja</string>
   <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_action_mode_title_empty">Odaberi stavke</string>
@@ -410,6 +420,7 @@ Pošaljite ovaj kod našem tehničaru."</string>
   <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
   <string name="miuix_indexer_collect">Zbirke</string>
   <string name="miuix_indexer_selected">Odabrano %s</string>
+  <string name="miuix_progressbar_loading">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_pull_to_refresh">Povuci za osvježiti</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshed">Gotovo</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshing">Osvježavanje</string>
@@ -418,6 +429,9 @@ Pošaljite ovaj kod našem tehničaru."</string>
   <string name="miuix_sbl_tracking_progress_labe_up_none">"To je sve za sada"</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh_fail">"Ne mogu učitati stavke"</string>
+  <string name="miuix_show_password">Prikaži zaporku</string>
+  <string name="miuix_stretchablewidget_collapsed">Zatvoreno</string>
+  <string name="miuix_stretchablewidget_expanded">Prošireno</string>
   <string name="monday">Ponedjeljak</string>
   <string name="monday_short">Pon</string>
   <string name="monday_shortest">P</string>
@@ -743,6 +757,7 @@ Pošaljite ovaj kod našem tehničaru."</string>
   <string name="passport_notification_title">Pogreška prijave za %1$s</string>
   <string name="passport_open_settings">Postavke</string>
   <string name="passport_page_load_failed">"Ne mogu otvoriti stranicu"</string>
+  <string name="passport_password_hide_show">Sakrij zaporku</string>
   <string name="passport_password_login_btn">Prijavite se</string>
   <string name="passport_password_not_show">"Ne prikazuj zaporku"</string>
   <string name="passport_password_phone_login">Prijavite se s Xiaomi računom</string>
@@ -1039,6 +1054,7 @@ Skenirajte donji kod pomoću Xiaomi aplikacije."</string>
   <string name="system_ad_switch_failed">"Ne mogu primjeniti postavke"</string>
   <string name="tab">Tab</string>
   <string name="template_percent">%1$d posto.</string>
+  <string name="text_input_layout_default_error">Ovo je zadana pogreška</string>
   <string name="talkback_scan_barcode">Skeniraj QR kod</string>
   <string name="temporary_not_available">"Ova značajka još nije dostupna."</string>
   <string name="third_party_login">računi trećih strana</string>
